clusters/homelab/environments/production/apps/chris-coombs-blog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chris-coombs-blog
  namespace: production
spec:
  selector:
    matchLabels:
      app: chris-coombs-blog
  replicas: 1
  template:
    metadata:
      labels:
        app: chris-coombs-blog
    spec:
      imagePullSecrets:
        - name: ghcr-credentials
      containers:
        - name: chris-coombs-blog
          image: ghcr.io/lewi0231/home-lab-automation-chris-coombs-blog:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: chris-coombs-blog
  namespace: production
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: chris-coombs-blog
